force-app/main/default/objects/WorkOrderLineItem/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <formula>TEXT(Asset.Asset_Ownership__c)</formula>
    <label>Asset Owner</label>
    <type>Text</type>
</CustomField>