force-app/main/default/objects/WorkOrderLineItem/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <formula>Asset.Bar_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bar Code</label>
    <type>Text</type>
</CustomField>