force-app/main/default/objects/WorkOrderLineItem/fields/Follow_Up_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Up Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Follow_Up_Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>