force-app/main/default/objects/WorkOrderLineItem/fields/Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Installation_Price__c</fullName>
    <label>Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>