force-app/main/default/objects/WorkOrderLineItem/fields/Is_Current_User_Pest_Tech__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_Pest_Tech__c</fullName>
    <description>This field is leveraged in the Replace Order Product flow. It allows the Flow to see if the running user is a Pest Technician.</description>
    <formula>$User.ProfileId = $Setup.Field_Service_Settings__c.FSL_Tech_Pest_Profile_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Pest Tech</label>
    <type>Checkbox</type>
</CustomField>