force-app/main/default/objects/WorkOrderLineItem/fields/isFullExchange__c.field-meta.xml
<CustomField>
    <fullName>isFullExchange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this is a full exchange line item. 
*** the value of isisFullExchangeProductCode__c is stamped in this field on line item insert only ***</description>
    <label>isFullExchange</label>
    <type>Checkbox</type>
</CustomField>