force-app/main/default/objects/WorkOrderLineItem/fields/isFullExchangeProductCode__c.field-meta.xml
<CustomField>
    <fullName>isFullExchangeProductCode__c</fullName>
    <description>Formula field that determines if this line item is associated with a full exchange product code</description>
    <formula>PricebookEntry.Product2.isFullExchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFullExchangeProductCode</label>
    <type>Checkbox</type>
</CustomField>