force-app/main/default/objects/WorkOrderLineItem/fields/IsInstallation__c.field-meta.xml
<CustomField>
    <fullName>IsInstallation__c</fullName>
    <formula>ISPICKVAL(Type_of_Service__c,&apos;Installation&apos;)</formula>
    <label>IsInstallation</label>
    <type>Checkbox</type>
</CustomField>