force-app/main/default/objects/WorkOrderLineItem/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <formula>Product2.Item_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Type</label>
    <type>Text</type>
</CustomField>