force-app/main/default/objects/WorkOrderLineItem/fields/Last_Automation_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Automation_Created_Date__c</fullName>
    <description>System field that is filled in by the nightly batch job generating Work Orders, modifying this field would affect the Service Schedule</description>
    <label>Last Automation Created Date</label>
    <type>Date</type>
</CustomField>