force-app/main/default/objects/WorkOrderLineItem/fields/Last_InFlight_WO_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_InFlight_WO_Date__c</fullName>
    <formula>TEXT(Order_Product__r.Last_InFlight_WO_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last InFlight WO Date</label>
    <type>Text</type>
</CustomField>