force-app/main/default/objects/WorkOrderLineItem/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Line Item Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>