force-app/main/default/objects/WorkOrderLineItem/fields/MASkipGeocoding__c.field-meta.xml
<CustomField>
    <fullName>MASkipGeocoding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Geocoding (MapAnything)</label>
    <type>Checkbox</type>
</CustomField>