force-app/main/default/objects/WorkOrderLineItem/fields/New_Asset_Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Asset_Bar_Code__c</fullName>
    <label>New Asset Bar Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>