force-app/main/default/objects/WorkOrderLineItem/fields/Pest_Auditable__c.field-meta.xml
<CustomField>
    <fullName>Pest_Auditable__c</fullName>
    <formula>WorkOrder.Account.PEST_Auditable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pest Auditable</label>
    <type>Checkbox</type>
</CustomField>