force-app/main/default/objects/WorkOrderLineItem/fields/PO_Number_for_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_for_Order_Product__c</fullName>
    <inlineHelpText>Used to write back to the Order Product on a Pest Emergency. When the Work Order is completed, the PO Number will be written to a new Order Product on the related Order.</inlineHelpText>
    <label>PO Number for Order Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>