force-app/main/default/objects/WorkOrderLineItem/fields/Product_Description_Translated__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_Translated__c</fullName>
    <description>The English or French Product Name determined by the Service Report Language of the Work Order</description>
    <formula>If(TEXT(WorkOrder.ServiceReportLanguage) == &apos;fr&apos;, PricebookEntry.Product2.French_Product_Name__c, PricebookEntry.Product2.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>