force-app/main/default/objects/WorkOrderLineItem/fields/Product_Service_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Price_Per_Unit__c</fullName>
    <label>Product Service Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>