force-app/main/default/objects/WorkOrderLineItem/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Order Line Items (Related Product)</relationshipLabel>
    <relationshipName>Work_Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>