force-app/main/default/objects/WorkOrderLineItem/fields/Requires_Order_Product_to_be_Created__c.field-meta.xml
<CustomField>
    <fullName>Requires_Order_Product_to_be_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag is to notify underlying logic to create Order Products immediately after the completion of the Work Order.</inlineHelpText>
    <label>Requires Order Product to be Created</label>
    <type>Checkbox</type>
</CustomField>