force-app/main/default/objects/WorkOrderLineItem/fields/SendToSage__c.field-meta.xml
<CustomField>
    <fullName>SendToSage__c</fullName>
    <formula>ISPICKVAL(StatusCategory, &apos;Completed&apos;) || ISPICKVAL(StatusCategory, &apos;Cancelled&apos;) || 
( (Completed_Date__c  &gt;= (TODAY() - 7))  &amp;&amp; (Completed_Date__c  &lt;= TODAY()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SendToSage</label>
    <type>Checkbox</type>
</CustomField>