force-app/main/default/objects/WorkOrderLineItem/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <formula>TEXT(Order_Product__r.Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Frequency</label>
    <type>Text</type>
</CustomField>