force-app/main/default/objects/WorkOrderLineItem/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>Service Notes</label>
    <type>TextArea</type>
</CustomField>