force-app/main/default/objects/WorkOrderLineItem/fields/Spawn_Follow_Up_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Spawn_Follow_Up_Work_Order__c</fullName>
    <formula>ISBLANK(Follow_Up_Work_Order_Line_Item__c) &amp;&amp; !ISBLANK( Product2.Follow_up_Product__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spawn Follow-Up Work Order</label>
    <type>Checkbox</type>
</CustomField>