force-app/main/default/objects/WorkOrderLineItem/fields/WOLI_Mid_Date__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Mid_Date__c</fullName>
    <formula>StartDate + FLOOR(((EndDate - StartDate) / 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WOLI Mid Date</label>
    <type>DateTime</type>
</CustomField>